# FN6905-Final-Assignment

./: .gitignore  README.md  generate_figures.py  generate_report_a.py  generate_report_b.py  generate_report_c.py  main.tex  pyproject.toml  question_a.py
Deep-PPDE/: ppde_BlackScholes_barrier.py  ppde_BlackScholes_lookback.py
Deep-PPDE/lib/: options.py
PDGM-Geometric_Asian/: pdgm_barrier.py  pdgm_lookback.py
PDGM-Geometric_Asian/numerical_results/PDGM_barrier/call_down-out/: log.txt  losses.npy  model.pt
PDGM-Geometric_Asian/numerical_results/PDGM_barrier/put_up-out/: log.txt  losses.npy  model.pt
PDGM-Geometric_Asian/numerical_results/PDGM_lookback/call/: log.txt  losses.npy  model.pt
PDGM-Geometric_Asian/numerical_results/PDGM_lookback/put/: log.txt  losses.npy  model.pt
numerical_results/BS/bsde/: log.txt
numerical_results/BS/call/bsde/: log.txt  result.pth.tar
numerical_results/BS/put/bsde/: log.txt  result.pth.tar
numerical_results/BS_barrier/call_down-in/bsde/: log.txt  result.pth.tar
numerical_results/BS_barrier/call_down-out/bsde/: log.txt  result.pth.tar
numerical_results/BS_barrier/put_up-in/bsde/: log.txt  result.pth.tar
numerical_results/BS_barrier/put_up-out/bsde/: log.txt  result.pth.tar
