[project]
name = "fn6905-exotic-options"
version = "0.1.0"
description = "FN6905 Exotic Options & Structured Products - Final Assignment: Monte Carlo and Deep PPDE pricing of barrier and lookback options"
readme = "README.md"
requires-python = ">=3.8,<3.10"
dependencies = [
    "torch==1.9.0",
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "tqdm>=4.62",
    "pandas>=1.3",
]

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
